--- a/index3.html
+++ b/index3.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>万成的博客</title>
-<meta name="viewport">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 <style>
 body{
    padding:16px;
 }
-img{
+/* img{
    max-width:100%;
-}
+} */
 </style>
 </head>
 <body>
